cmake_minimum_required(VERSION 3.19)
project(datastruct_algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(datastruct_algorithm main.cpp sort_methods.h kuohao_match.h binary_tree_normal_op.h list_op.h two_sum.h backtrack.h dp_1d.h find_kth_largest.h lru_lfu.h sliding_window.h dp_2d.h binary_tree_serialize.h binary_tree_inorder_traversal.h ip_address_op.h dp_hd.h dp_rob.h array_rotate.h array_duplicate.h calculater.h string_reverse.h array_string_op.h bfs_dfs.h dp_2dm.h backtrak_2dm.h array_2d.h array_2f_search.h stack_op.h bit_op.h jump_game.h keChengBiao_tp.h math_problem.h dp_range.h string_op.h
        dp_buy_stocks.h)